# mc-order-execution

./: .gitignore  CLAUDE.md  README.md  prompt.md  pyproject.toml  requirements.txt
.claude/: settings.examples.json  settings.json
.github/workflows/: ci.yml  claude.yml
.streamlit/: config.toml
data/EuroStoxx/: AIAgent_EuroStoxx.csv
data/GBP - British Pound/: AIAgent_GBPUSD.csv
data/German Bunds - German Government Bonds/: AIAgent_Bunds.csv
data/HeatingOil/: AIAgent_HeatingOil.csv  HOK22.csv  HON22.csv
data/JPY - Japanese Yen/: AIAgent_JPY.csv
notebooks/: 01_load_gold.ipynb  agent_value.ipynb  mc_showcase.ipynb
notes/: agent-value.md  component-review.md  next-session.md  research-foundation.md  strategy-sweep.md
plan/: README.md  stream-a-ewma.md  stream-b-data.md  stream-c-backtest.md  stream-d-strategy.md  stream-e-ui.md  stream-g-agentic.md
reports/: ablation_run.txt  agent_all_assets.csv
scripts/: ablation.py  compare_benchmarks.py  compare_dynamic.py  compare_slicing.py  compare_tail_reduction.py  diagnose_tail.py  plot_agents.py  run_agent_all_assets.py  run_agent_eval.py  run_mc_smoke.py  run_v1.py  sweep_agent_metrics.py  sweep_chase.py  sweep_fill_rate.py
src/: app.py  epdf.py  plot_volume.py  plotting.py  ranges.py  regime.py  streamlit_app.py  viz_plotly.py
src/order_mgmt/: __init__.py  backtest.py  baselines.py  loader.py  pipeline.py  strategy.py  ticks.py
src/order_mgmt/agent/: __init__.py  benchmarks.py  dynamic.py  loader.py  metrics.py  slicing.py  synthetic.py
src/order_mgmt/mc/: __init__.py  bootstrap.py  fit.py  paths.py  results.py  samplers.py  simulator.py  validation.py  variance_reduction.py
tests/: test_ablation.py  test_agent_benchmarks.py  test_agent_dynamic.py  test_agent_loader.py  test_agent_metrics.py  test_agent_slicing.py  test_agent_synthetic.py  test_backtest.py  test_ewma.py  test_ewma_spec.py  test_loader.py  test_mc_bootstrap.py  test_mc_fit.py  test_mc_no_lookahead.py  test_mc_paths.py  test_mc_samplers.py  test_mc_vr.py  test_no_lookahead.py  test_pipeline.py  test_ranges.py  test_strategy.py  test_ticks.py  test_viz_plotly.py
